src/index.css
@import "tailwindcss";

@theme {
  /* ## Colors */

  /* ### Primary */

  --color-Dark-Blue: hsl(233, 26%, 24%);
  --color-Lime-Green: hsl(136, 65%, 51%);
  --color-Bright-Cyan: hsl(192, 70%, 51%);

  /* ### Neutral */

  --color-Grayish-Blue: hsl(233, 8%, 62%);
  --color-Light-Grayish-Blue: hsl(220, 16%, 96%);
  --color-Very-Light-Gray: hsl(0, 0%, 98%);
}

/* add the font */
* {
  font-family: "Public Sans", sans-serif;
}

body {
  /* making toggling the mode smoother... */
  transition: 1s;
}

/* changing the selection color... */
::selection {
  background-color: #ffecbc;
  color: var(--color-Dark-Blue);
}

::-moz-selection {
  background-color: #ffecbc;
  color: var(--color-Dark-Blue);
}

/* fading out the page when them MobileNav is rendered and vis versa... */
body.overlay::after {
  content: "";
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: #8489a8;
  opacity: 0.7;
  inset: 0;
}

/* hamburger menu */
.hamburger {
  transition: all 0.25s;
  span {
    transition: all 0.5s;
  }
}
.hamburger-bottom {
  transform: translateY(14px);
}
.hamburger.open {
  transform: rotate(90deg);
  transform: translateY(0px);

  .hamburger-top {
    transform: rotate(45deg) translateY(6px) translate(6px);
  }

  .hamburger-middle {
    display: none;
  }

  .hamburger-bottom {
    transform: rotate(-45deg) translateY(6px) translate(-6px);
  }
}

/* mobile nav animation */
#menu {
  animation: show-nav 1s ease 1 forwards;
  &.fade-nav {
    animation: fade-nav 1s ease 1 forwards;
  }
}

@keyframes show-nav {
  from {
    transform: translateX(100%);
  }

  to {
    transform: translateX(0%);
  }
}

@keyframes fade-nav {
  to {
    transform: translateX(105%);
  }
}

/* addeing transition to the request invite button */
.invite-btn {
  transition: filter 0.3s ease, opacity 0.3s ease, box-shadow 0.5s ease;
}

/* scroll bar animation... */
::-webkit-scrollbar {
  width: 0;
}

.progress-bar {
  animation: progress 5s linear infinite;

  &::before,
  &::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(
      to top,
      var(--color-Lime-Green),
      var(--color-Bright-Cyan)
    );
    filter: blur(15px);
  }
}

&::after {
  filter: blue(35px);
}

@keyframes progress {
  0%,
  100% {
    filter: hue-rotate(0deg);
  }
  50% {
    filter: hue-rotate(365deg);
  }
}

/* dark mode */
body.dark {
  background-color: #03181b;
  &.overlay::after {
    background-color: #032727;
  }

  ::selection {
    background-color: #d1fab6;
  }

  ::-moz-selection {
    background-color: #d1fab6;
  }

  h1,
  h2,
  h3 {
    color: #d1fab6;
  }

  .features {
    background-color: transparent;
  }

  .articles {
    li {
      background-color: #042021;
      box-shadow: 0 0 35px #111;
    }
  }

  header,
  footer,
  #menu {
    background-color: #032727;
    a {
      color: var(--color-Very-Light-Gray);
    }
    a:not(.invite-btn):hover {
      color: #d1fab6;
    }

    svg:hover {
      fill: #d1fab6;
    }
  }
}

